--- a/app/src/main/res/layout/activity_function.xml
+++ b/app/src/main/res/layout/activity_function.xml
@@ -15,55 +15,126 @@
             android:orientation="vertical">
 
             <Button
-                android:onClick="create"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="create"
                 android:text="create" />
 
             <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:onClick="from"
-                android:text="from"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="from" />
 
             <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:onClick="just"
-                android:text="just SAMPLE1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="just SAMPLE1" />
+
             <Button
-                android:text="just SAMPLE2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:onClick="just2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="just SAMPLE2" />
 
             <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:onClick="range"
-                android:text="range"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="range" />
 
             <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:onClick="timer"
-                android:text="timer"
+                android:text="timer" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="interval"
+                    android:text="interval" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="stopInterval"
+                    android:text="stop Interval" />
+            </LinearLayout>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="repeat"
+                android:text="repeat" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="defer"
+                android:text="defer" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="map"
+                android:text="map sample1" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="map2"
+                android:text="map sample2" />
+
+            <LinearLayout
+                android:id="@+id/ll_map"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="map3"
+                    android:text="map sample3" />
+
+
+            </LinearLayout>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="flatmap"
+                android:text="flatmap" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="concatMap"
+                android:text="concatMap" />
+
+            <Button
+                android:onClick="switchMap"
+                android:text="switchMap"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <Button
-                android:onClick="interval"
-                android:text="interval"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
     </ScrollView>
 
     <View
-        android:background="@android:color/black"
         android:layout_width="match_parent"
-        android:layout_height="1px"/>
+        android:layout_height="1px"
+        android:background="@android:color/black" />
+
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
