--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -8,12 +8,31 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.example.cicinnus.learnrxjava.MainActivity">
 
     <Button
-        android:onClick="function"
-        android:id="@+id/function"
+        android:onClick="operator1"
+        android:id="@+id/operator1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="RxJava操作符" />
-</RelativeLayout>
+        android:text="RxJava操作符1" />
+
+    <Button
+        android:onClick="operator2"
+        android:text="RxJava操作符2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:onClick="operator3"
+        android:text="RxJava操作符3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:onClick="operator4"
+        android:text="RxJava操作符4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+</LinearLayout>
