--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,35 +4,50 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="com.example.cicinnus.learnrxjava.MainActivity">
 
     <Button
-        android:onClick="operator1"
         android:id="@+id/operator1"
+
+        style="@style/normalBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="RxJava操作符1" />
+        android:onClick="operator1"
+        android:text="RxJava操作符1(创建)" />
 
     <Button
+        style="@style/normalBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:onClick="operator2"
-        android:text="RxJava操作符2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:text="RxJava操作符2(转换)" />
 
     <Button
+        style="@style/normalBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:onClick="operator3"
-        android:text="RxJava操作符3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:text="RxJava操作符3(过滤)" />
 
     <Button
-        android:onClick="operator4"
-        android:text="RxJava操作符4"
+        style="@style/normalBtn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:onClick="operator4"
+        android:text="RxJava操作符4(结合)" />
+
+    <Button
+        style="@style/normalBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="operator5"
+        android:text="RxJava操作符5(效用)" />
+
+
+
 </LinearLayout>
